--- a/oauth/authorize/login.html
+++ b/oauth/authorize/login.html
@@ -5,47 +5,15 @@
 		<meta name="OAuth Login" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>OAuth Login</title>
-		<link rel="stylesheet" href="../authorize/css/bootstrap.min.css">
-		<style>
-			body {
-				margin-top: 60px;
-				background-color: #fafafa;
-			}
-
-			#signin-form {
-				padding: 7px 15px;
-				background-color: white;
-				border-radius: 5px;
-				box-shadow: 0 2px 6px -4px #333;
-			}
-
-			#oauth2 {
-				width: 85px;
-			}
-		</style>
+		<link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-				<form id="signin-form" class="col-sm-4 col-sm-offset-4" role="form" method="post">
-					<img id="oauth2" class="pull-right img-responsive" src="../authorize/img/OAuth2.png" alt="OAuth 2.0" />
-					<h1>Sign in</h1>
-					<div class="form-group">
-						<label for="username" class="control-label">Username</label>
-						<input type="text" name="username" id="username" class="form-control" required />
-					</div>
-
-					<div class="form-group">
-						<label for="password" class="control-label">Password</label>
-						<input type="password" name="password" id="password" class="form-control" required />
-					</div>
-
-					<button class="btn btn-primary pull-right">
-						<span>Sign in </span>
-						<i class="glyphicon glyphicon-ok"></i>
-					</button>
-				</form>
-			</div>
-		</div>
+		<div id="initial_file" data-initialfile="#initial_file#"></div>
+		<div id="forgotten_key" data-key="#forgotten_key#"></div>
+		<div id="user_id" data-id="#id#"></div>
+		
+		<div class="container" id="content"></div>
+		<script src="../../bower_components/webapp/App.class.js"></script>
+		<script src="../authorize/js/main.js"></script>
 	</body>
 </html>
